deploy/kubernetes/base/grott-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grott
  labels:
    app.kubernetes.io/component: grott

spec:
  selector:
    matchLabels:
      app: grott
  replicas: 1
  minReadySeconds: 7
  strategy:
    # indicate which strategy we want for rolling update
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 3
      maxUnavailable: 1

  # only keep last n revisions in history
  revisionHistoryLimit: 8

  template:
    metadata:
      labels:
        app: grott
        app.kubernetes.io/component: grott

    spec:
      serviceAccountName: sa-grott
      restartPolicy: Always

      volumes:
        - name: grott-ini-file
          configMap:
            # Provide the name of the ConfigMap containing the files you want
            # to add to the container
            name: grott-ini
            defaultMode: 420
            items:
              - key: grott.ini
                path: grott.ini

      containers:
        - name: grott
          image: ledidobe/grott:2.8.2
          imagePullPolicy: Always
          volumeMounts:
            - name: grott-ini-file
              mountPath: /app/grott.ini
              subPath: grott.ini
          ports:
            - containerPort: 5279
              name: "grott-tcp"
              protocol: TCP
          # readinessProbe:
          #   tcpSocket:
          #     port: 5729
          #   initialDelaySeconds: 5
          #   periodSeconds: 30
          #   failureThreshold: 5
          # livenessProbe:
          #   tcpSocket:
          #     port: 5729
          #   initialDelaySeconds: 5
          #   periodSeconds: 30
          #   failureThreshold: 5
