deploy/kubernetes/base/grott-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: service-grott
spec:
  # use a NodePort to expose tcp service externally, not a ClusterIp
  type: NodePort
  ports:
    - port: 80
      name: "grott-tcp"
      targetPort: 5729
  selector:
    app: grott
