deploy/kubernetes/base/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing
  annotations:
  labels:
    app: ing
spec:
  rules:
    - host: daas.home.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service-grott
                port:
                  number: 5279
